# Ghost-Proto

./: .gitignore  GHOSTPROTO_VNEXT_ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  TODO.md  action.yml  install.ps1  package-lock.json  package.json
src/: index.ts
src/apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
src/apps/studio/src-tauri/capabilities/: default.json
src/core/: auditor.ts  config.ts
src/reporters/: agent-log.ts  html.ts  interactive.ts  json.ts  markdown.ts  terminal-utils.ts  terminal.ts
tests/: cli.test.ts
tests/apps/: cli.test.ts  runner.test.ts  studio-selection.test.ts  studio-workbench.test.ts
tests/compiler/: adapter.test.ts  analysis-cfg.test.ts  analysis-context-optimizer.test.ts  analysis-navigation.test.ts  analysis-policy-engine.test.ts  analysis-query.test.ts  analysis-render.test.ts  analysis-retrieval.test.ts  analysis-rule-bench.test.ts  analysis-rules.test.ts  analysis-suppressions.test.ts  analysis-taint.test.ts  analysis-trace.test.ts  context.test.ts  equivalence-passes.test.ts  manager.test.ts  parser-recovery.test.ts  repository-builder.test.ts  repository-complexity.test.ts  repository-query.test.ts  repository-snapshot.test.ts  repository-storage.test.ts  runtime-agent-consensus.test.ts  runtime-agent-roles.test.ts  runtime-blackboard.test.ts  runtime-dag.test.ts  runtime-inference-budget.test.ts  runtime-inference-matcher.test.ts  runtime-inference-validator.test.ts  runtime-knowledge.test.ts  runtime-scheduler.test.ts  runtime-working.test.ts  serializer.test.ts  snapshot.test.ts  validator.test.ts
(+135 files in other folders)
