[package]
name = "ghostproto-studio"
version = "0.2.2"
description = "GhostProto Studio Software Intelligence IDE"
authors = ["Shehryar Sohail"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0" }

[dependencies]
tauri = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
